test/fail/basic_syntax/invalid_eq.lly
#[
SyntaxError: Invalid operation: List[Integer] == List[String].
    from invalid_eq.lly:9
]#

var v1 = [1]
var v2 = ["1"]

v1 == v2
